# lily-lang

./: .clang-format  .gitignore  CMakeLists.txt  DOC.md  LICENCE  Makefile  README.md  a.lily  app.lily  test.lily
lib/core/: Int128.lily  Int16.lily  Int32.lily  Int64.lily  Int8.lily  Isize.lily  Uint128.lily  Uint16.lily  Uint32.lily  Uint64.lily  Uint8.lily  Usize.lily  any.lily  array.lily  bool.lily  char.lily  core.lily  float32.lily  float64.lily  int128.lily  int16.lily  int32.lily  int64.lily  int8.lily  isize.lily  never.lily  option.lily  ptr.lily  ref.lily  str.lily  tuple.lily  uint128.lily  uint16.lily  uint32.lily  uint64.lily  uint8.lily  unit.lily  usize.lily
lib/std/: int8.lily  std.lily
scripts/: compile.sh  patch_cmake.sh
scripts/patch/: macros.h  macros.patch
scripts/patch/macros/: macros.h  macros.patch
scripts/patch/runtime_CMake/: CMakeLists.patch  CMakeLists.txt
scripts/patch/runtime_CMake/c/: CMakeLists.patch  CMakeLists.txt
scripts/patch/src_CMake/: CMakeLists.patch  CMakeLists.txt
src/base/: algorithm.c  algorithm.h  assert.h  color.c  color.h  file.c  file.h  format.c  format.h  list.c  list.h  macros.h  map.c  map.h  mem.c  mem.h  new.h  option.c  option.h  platform.h  print.c  print.h  result.c  result.h  str.c  str.h  string.c  string.h  test.c  test.h  try.h  tuple.c  tuple.h  types.h  u128.c  u128.h  util.c  util.h  vec.c  vec.h
src/command/: command.h  diagnostic.h  help.h  version.h
src/lang/analysis/: symbol_table.c  symbol_table.h  typecheck.c  typecheck.h
src/lang/builtin/: builtin.c  builtin.h  builtin_c.c  builtin_c.h
src/lang/diagnostic/: diagnostic.c  diagnostic.h  summary.c  summary.h
src/lang/generate/: generate.c  generate.h  generate_c.c  generate_c.h
src/lang/parser/: ast.c  ast.h  parser.c  parser.h
src/lang/runtime/: Allocator.c  Allocator.h  Arch.h  Array.c  Array.h  CMakeLists.txt  Int128.c  Int128.h  Int16.c  Int16.h  Int32.c  Int32.h  Int64.c  Int64.h  Int8.c  Int8.h  List.c  List.h  Mem.c  Mem.h  Net.h  Os.h  Uint128.h  Uint16.c  Uint16.h  Uint32.c  Uint32.h  Uint64.c  Uint64.h  Uint8.c  Uint8.h  api.h  generic.h  io.c  io.h  mod.h  runtime.c  runtime.h
src/lang/runtime/c/: Arch.h  Array.c  Array.h  CMakeLists.txt  Int128.c  Int128.h  Int32.c  Int64.h  Int8.h  Net.c  Os.h  Uint16.h  Uint64.h  Uint8.c  io.h  mod.h  runtime.c  runtime.h
src/lang/runtime/cpp/: CMakeLists.txt  Int16.hpp  Int32.hpp  Int64.hpp  Int8.hpp  Mut.hpp  Tuple.hpp  Uint16.hpp  Uint32.hpp  Uint64.hpp  Uint8.hpp  mod.cpp  runtime.hpp
src/lang/runtime/js/: Arch.ts  Array.ts  Char.ts  Exception.ts  Float32.ts  Float64.ts  Int128.ts  Int16.ts  Int32.ts  Int64.ts  Int8.ts  Isize.ts  Mut.ts  Optional.ts  Ptr.ts  Ref.ts  Tuple.ts  Uint128.ts  Uint16.ts  Uint32.ts  Uint64.ts  Uint8.ts  Usize.ts  package-lock.json  package.json  runtime.ts
src/lang/scanner/: scanner.c  scanner.h  token.c  token.h
tests/analysis/: alias.c  class.c  enum.c  error.c  expr.c  fun.c  global_access.c  identifier_access.c  import.c  module.c  object.c  record.c  self_access.c  stmt.c  tag.c  test.c  trait.c  type.c  variable.c
tests/parser/: alias.c  alias.lily  class.c  class.lily  constant.c  constant.h  constant.lily  enum.c  enum.lily  error.c  error.lily  expr.c  expr_array.lily  expr_array_access.lily  expr_binaryop.lily  expr_block.lily  expr_dereference.lily  expr_fun_call.lily  expr_global_access.lily  expr_grouping.lily  expr_identifier.lily  expr_identifier_access.lily  expr_if.lily  expr_lambda.lily  expr_literal.lily  expr_nil.lily  expr_none.lily  expr_question_mark.lily  expr_record_call.lily  expr_ref.lily  expr_self.lily  expr_try.lily  expr_tuple.lily  expr_tuple_access.lily  expr_unaryop.lily  expr_undef.lily  expr_variable.lily  expr_variant.lily  expr_wildcard.lily  fun.c  (+30 more)
tests/runtime/js/: Int128.test.ts  Int16.test.ts  Int32.test.ts  Int64.test.ts  Int8.test.ts  package.json  pnpm-lock.yaml  tsconfig.json
tests/scanner/: bit_char.lily  bit_string.lily  char.lily  float.lily  identifier.c  identifier.h  identifier.lily  int.lily  keyword.c  keyword.h  keyword.lily  literal.c  literal.h  operator.c  operator.h  operator.lily  separator.c  separator.h  separator.lily  test.c
(+1 files in other folders)
